[gd_scene load_steps=2 format=3 uid="uid://bsq2qfxvd0kq7"]

[ext_resource type="Script" path="res://scenes/main/MainMenu.gd" id="1_main"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.3, 0.5, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "ðŸ‘‹ SLAP GAME"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="PlayButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "JOUER"

[node name="CustomizeButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Customiser Avatar"

[node name="Spacer2" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="InfoLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "v0.1 - Projet Familial"
horizontal_alignment = 1

[connection signal="pressed" from="MenuContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuContainer/CustomizeButton" to="." method="_on_customize_button_pressed"]
